# fioapi-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
examples/: fetch_transactions.rs  fioapi_cli.rs  set_last_unsuccessful_download_date.rs
src/: client.rs  error.rs  lib.rs  models.rs
