[package]
name = "fioapi"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
