[package]
name = "fioapi"
version = "0.3.0"
edition = "2024"
authors = ["Libor Wagner"]
license = "MIT"
description = "Async Rust client for the Fio banka REST API"
homepage = "https://github.com/wagnelib/fioapi-rs"
repository = "https://github.com/wagnelib/fioapi-rs"
readme = "README.md"
keywords = ["fio", "banking", "api", "finance", "client"]
categories = ["api-bindings", "network-programming"]
rust-version = "1.92"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39", features = ["serde"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
log = "0.4.29"
env_logger = "0.11.8"
clap = { version = "4.5.54", features = ["derive", "env"] }
